--- a/.travis.yml
+++ b/.travis.yml
@@ -129,8 +129,8 @@ install:
     fi
 
 before_script:
-    make download-deps
-    $EMACS --version
+    make download-deps && $EMACS --version
+
 
 
 ###
