Run tests only on emacs24.
Emacs23 doesn't seem to work, and no point wasting travis' time until
this is debugged and fixed.

[skip ci]

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ env:
   matrix:
 #   - EMACS=xemacs21
 #   - EMACS=emacs22
-    - EMACS=emacs23
+#   - EMACS=emacs23
     - EMACS=emacs24
 #   - EMACS=emacs-snapshot
   global:
@@ -45,7 +45,7 @@ env:
 matrix:
   allow_failures:
 #   - env: EMACS=xemacs21
-    - env: EMACS=emacs23
+#   - env: EMACS=emacs23
 
 ###
 ### limit build attempts to defined branches
