Adds write-good for Vale

--- a/.vale.ini
+++ b/.vale.ini
@@ -3,7 +3,7 @@ StylesPath = ci/vale/styles
 MinAlertLevel = error
 Vocab = Base
 
-Packages = Microsoft, Readability
+Packages = Microsoft, Readability, write-good
 
 [*.org]
-BasedOnStyles = Vale, Microsoft, Readability
+BasedOnStyles = Vale, Microsoft, Readability, write-good
