--- a/.vale.ini
+++ b/.vale.ini
@@ -1,6 +1,6 @@
 StylesPath = ci/vale/styles
 
-MinAlertLevel = error
+MinAlertLevel = warning
 Vocab = Base
 
 Packages = Microsoft, Readability, write-good
