Simplify linting: only use Vale package

--- a/.vale.ini
+++ b/.vale.ini
@@ -1,9 +1,7 @@
 StylesPath = ci/vale/styles
 
-MinAlertLevel = warning
+MinAlertLevel = suggestion
 Vocab = Base
 
-Packages = Microsoft, Readability, write-good
-
 [*.org]
-BasedOnStyles = Vale, Microsoft, Readability, write-good
+BasedOnStyles = Vale
